<resources>
    <string name="app_name">JetpackArchitectureAssignment</string>
    <string name="view_model_livedata_data_binding">ViewModel + LiveData + Data Binding</string>
    <string name="room">Room</string>
    <string name="work_manage">Work Manager</string>
    <string name="paging">Paging</string>
    <string name="navigation_component">Navigation Component</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_page_number_for_fetching_page">Enter Page Number For Fetching Page</string>
    <string name="submit">Submit</string>
    <string name="created_at">Created At:</string>
    <string name="title">Title:</string>
    <string name="error">error</string>
    <string name="no_Internet">Internet is off,Please turn on internet</string>
    <string name="no_data">No Data Available</string>
    <string name="register_student">Register Student</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_email_address">Enter Student Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_re_type_password">Enter Re-type Password</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_the_your_address">Enter the your address</string>
    <string name="add">Add</string>
    <string name="other">Other</string>
    <string name="student_personal_information">Student personal information</string>
    <string name="enter_birth_date">Enter Birth Date</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="student_education_information">Student Education Information</string>
    <string name="select_course">Select Course :</string>
    <string name="hsc_details">Hsc Details :</string>
    <string name="enter_passing_yer">Enter Passing Year :</string>
    <string name="passing_year">Passing Year</string>
    <string name="enter_hsc_percentage">Enter Hsc Percentage :</string>
    <string name="percentage">Percentage</string>
    <string name="error_full_name">Please Enter Student Name</string>
    <string name="error_phone_number_is_empty">Please Enter Contact Number</string>
    <string name="error_phone_number_valid">Enter Valid Contact Number</string>
    <string name="error_email_is_empty">Please Enter Email Address</string>
    <string name="error_email_valid">Enter valid Email Address</string>
    <string name="error_address">please Enter Address</string>
    <string name="error_birth_is_empty">Please Enter Date of Birth</string>
    <string name="error_passing_year">Enter Hsc Passing  Year</string>
    <string name="error_percentage">Enter Hsc Percentage</string>
    <string name="student_name">Student Name: </string>
    <string name="contact_number">Contact Number:</string>
    <string name="course_name">Course Name:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="error_not_valid_percentage">Enter Valid Percentage</string>
    <string name="select_hobbies">Select Hobbies</string>
    <string name="sport">Sport</string>
    <string name="traveling">Traveling</string>
    <string name="cultural_activities">Cultural Activities</string>
    <string name="inset_data">Student Registered</string>
    <string name="update_data">Student Data Updated</string>
    <string name="delete_message">"Do you Want  Delete Student Details?"</string>
    <string name="no_data_message">No Student Register Now</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="charge_mode_alarm">Charge Mode Alarm</string>
    <string name="battery_low_alarm">Battery Low Alarm</string>
    <string name="network_state_change">Network State Change Alarm</string>
    <string name="gps_alarm">Gps Alarm</string>
    <string name="device_idle_alarm">Device Idle Alarm</string>
    <string name="predefined_time">Predefined Time Alarm</string>
    <string name="after_certain_amount_time">After Some  Time Alarm set</string>
    <string name="charge_mode_alarm_long_description">It will giving Battery Charging Notification When Charging Mode On .And If We Change Charging Mode then Not Charging Notification Give </string>
    <string name="battery_low_long_description">It will Giving Notification When Your Device Battery is Less than 15% </string>
    <string name="network_change_long_description">It will notify Your Device Connected   Network State Change like Your Device First Connected to Mobile data then it change to wifi it will give Notification </string>
    <string name="gps_state_change_alarm_long_description">It will Notify when Gps Enable And Disable</string>
    <string name="device_idle_alarm_long_description"> It Notify for When you not interact the Your Device in idle State And Give notification</string>
    <string name="predefined_time_alarm_long_description">It will Set Alarm for   Predefined Time in our Case it is 30 Minute</string>
    <string name="set_alarm_after_some_time_long_description">It will Set  Alarm After Some Time for user entered Time</string>
    <string name="charge_mode_alarm_short_description">It will Notify when Charging Mode change</string>
    <string name="battery_low_short_description">It will Set Alarm for Not Low Battery Alert</string>
    <string name="network_change_short_description">It will notify Whenever Network State Change</string>
    <string name="gps_state_change_alarm_short_description">It will Notify  Gps State Change</string>
    <string name="device_idle_alarm_short_description"> It Notify for When Device is idle</string>
    <string name="predefined_time_alarm_short_description">It will Set Alarm for  Predefined Time</string>
    <string name="repeating_alarm_error">For After Some Time  Alarm  set First Enter Time</string>
    <string name="set_alarm_after_some_time_short_description">It will Set Alarm for After Certain Time</string>
    <string name="battery_charging">Battery Charging</string>
    <string name="battery_not_charging">Battery Not Charging</string>
    <string name="battery_low">Battery Not Low.</string>
    <string name="network_state">Network State Connected </string>
    <string name="network_state_mobile">Network State Connected to Mobile Data</string>
    <string name="network_state_bluetooth">Network State Connected to Bluetooth</string>
    <string name="network_state_not_connected">Not Connect to Network</string>
    <string name="gps_enable">Gps Enable</string>
    <string name="alarm_description">Alarm Description</string>
    <string name="alarm_title">AlarmTitle</string>
    <string name="gps_disable">Gps Disable</string>
    <string name="alarm_long_description">Alarm Long Description</string>
    <string name="predefined_time_alarm">Predefined Alarm set</string>
    <string name="after_some_alarm_set">After Some time Alarm Set</string>
    <string name="device_idle">Device is in Idle State</string>
    <string name="device_not_idle">Device is in Not Idle State</string>
    <string name="enter_time_for_repeating">Enter Time For Repeating in Second</string>
    <string name="redirect_to_screen_2">Redirect To Screen 2</string>
    <string name="redirect_to_screen_3">Redirect ToScreen3</string>
    <string name="btnBack">Back</string>
    <string name="screen1">Screen:1</string>
    <string name="screen2">Screen:2</string>
    <string name="screen3">Screen:3</string>
    <string name="add_to_backstack">Add To BackStack:</string>
    <string-array name="courses">
        <item>B.Tech(Computer Engineering)</item>
        <item>B.Tech(I.T Engineering)</item>
        <item>B.Tech(Mechanical Engineering)</item>
        <item>B.Tech(Civil Engineering)</item>
        <item>B.Tech(E.C Engineering)</item>
    </string-array>
</resources>
